--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,11 +3,13 @@
 
 
 :root {
-	--text-small: calc(15px + 0.4vh);
-	--text-med: calc(16px + 0.5vw);
-	--text-large: calc(20px + 0.4vw);
-	--desktop-nav-size: 35%;
-	--border-size: 10px
+	--text-small: calc(12px + 0.4vh);
+	--text-med: calc(14px + 0.4vh);
+	--text-large: calc(20px + 0.4vh);
+	--desktop-nav-size: calc(min(25vw, 400px));
+	--border-size: 7px;
+	--line-height: 1.3em;
+	--letter-spacing:1px
 
 	/*--desktop-product-height: 50vh;*/
 	/*--mobile-product-height: 30vh;*/
@@ -18,7 +20,11 @@
 	/*--desktop-item-gap: 1em;*/
 	/*--mobile-item-gap: 1em;*/
 	/*--button-hover: #050505;*/
-} 
+}
+
+#root {
+	width: 100vw;
+}
 
 
 html,
@@ -1997,41 +2003,28 @@ div.menu-visible {
 
 
 
-#root {
-	width: 100vw;
-}
+
 
 
 
 .shipping {
+	display: flex;
 	font-size: calc(10px + 0.3vw);
 	font-family: "Suisse_Medium",sans-serif;
 	align-items: center;
+	text-align: center;
+	justify-content: center;
+	justify-items: center;
 	font-weight: lighter;
 	margin-bottom: .1em;
 	width: 99%;
-	text-align: center;
-	/*border: solid 1px rgba(160, 160, 160, 0.3);*/
+
 
 }
 
 
 
-@media screen and (max-width: 980px) {
-	.image-container{
-		/* flex-direction: column; */
-	}
 
-	#product-section {
-		flex-direction: column;
-
-	}
-
-	.itemCard{
-	
-	}
-
-}
 
 #header {
 	border-bottom: 0;
