--- a/src/css/productCard.css
+++ b/src/css/productCard.css
@@ -16,14 +16,22 @@
 }
 
 #itemRowContainer.desktop {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /*shape-outside: 10px;*/
+    column-gap: 15px;
+    row-gap: 10px;
+    margin: 1em;
+    width: auto;
+    height: auto;
+    grid-auto-rows: min-content;
+    grid-template-rows: min-content;
     align-items: center;
-    padding-left: var(--desktop-nav-size);
+    /*todo this makes the columns even but makes the text no wrap */
+    /*white-space: nowrap;*/
 }
 
-/*todo: add qualifier to root and use calc to center it between the nav and right*/
-@media screen and (min-width: 980px){
 
-}
 
 .itemCard{
     object-fit:scale-down;
@@ -38,13 +46,16 @@
     border: solid 1px rgba(160, 160, 160, 0.5);
     background-color: #eaeaea;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: var(--border-size);
     max-width: 650px;
-
-
 }
-.itemCard:nth-child(2)>.itemcontent>.image-container{
-    flex-direction: row-reverse;
+
+
+#desktop.itemCard{
+    width: auto;
+    height: auto;
+    margin-bottom: 0;
+    align-items: center;
 }
 
 
@@ -59,15 +70,14 @@
 }
 
 
-.row_img{
+.displayImage{
+    object-fit: fill;
+    overflow: hidden;
     margin: 0 0 0 0;
-    display: flex;
-    flex-direction: row;
-    overflow: auto;
     height: auto;
     width: auto;
     align-items: center;
-    border-radius: 10px;
+    /*border-radius: var(--border-size);*/
 
 }
 
@@ -84,7 +94,7 @@
 
 
 .image-container {
-    object-fit: fill;
+    object-fit: contain;
     margin: 0 0 0 0;
     display: flex;
     flex-direction: row;
@@ -93,8 +103,9 @@
     align-items: center;
     max-height: 70%;
     padding-top: 0%;
-    border-radius: 10px;
+    /*border-radius: var(--border-size);*/
     position: relative;
+    /*overflow: auto;*/
 }
 
 .swipe {
@@ -151,17 +162,16 @@
     font-family: "Suisse_Regular",sans-serif;
     margin: 0.5em 0 0 0;
     text-align: center;
-
     line-height: 1.2
 }
 
 .itemdesc {
-    font-size: calc(15px + 0.39vw);
+    font-size: var(--text-med);
     /*font-family: 'Suisse_regular',sans-serif;*/
-
     font-family: "Source Sans Pro";
     align-items: center;
     line-height: 1.2em;
+    height: calc(4*1.2em);
     margin: 0.5em 0 0 0;
     text-align: left;
     padding: 0 .3em 0 .3em;
@@ -178,48 +188,50 @@
 }
 
 
-
 .pricetag {
-    font-size: var(--text-small);
+    color: #111111;
+    font-size: var(--text-med);
+    /*font-size: 20px;*/
     font-family: "Suisse_Medium", sans-serif;
-    padding: .4em;
-    line-height: 1em;
+    /*padding: .2em;*/
+    line-height: var(--line-height);
     border: solid 1px rgba(160, 160, 160, 0.3);
-    border-radius: 10px;
+    border-radius: var(--border-size);
     background-color: #e0e0e0;
     margin-right: auto;
-
+    padding: calc(3vh - 1em) .5em calc(3vh - 1em) .5em;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 
 .checkoutOptions {
     display: flex;
     min-width: 0;
-
-    /*width: auto;*/
 }
 
 .buyButton {
+    background-color: #e0e0e0;
+    color: #111111;
     display: flex;
-    /*margin-right: 5%;*/
-    background-color: #bbbbbb;
     justify-content: center;
-    /*width: fit-content;*/
-    /*block-size: fit-content;*/
     height: fit-content;
-    border-radius: 10px;
+    border-radius: var(--border-size);
     margin-left: 1em;
-
+    padding: calc(3vh - 1em) .5em calc(3vh - 1em) .5em;
+    font-size: var(--text-small);
+    font-family: "Suisse_Medium", sans-serif;
+    /*padding: .4em;*/
+    font-weight: 400;
+    line-height: var(--line-height);
+    letter-spacing: 1px;
+    border: solid 1px rgba(160, 160, 160, 0.3);
 }
 
-.buyButton > span {
-    color: black;
-    margin: .5em .5em .5em .5em;
-
-}
 
 .buyButton#express {
-    background-color: #99cc99;
+    border: solid 1px rgba(2, 23, 64, 0.5);
+
 }
 
 .arrowbutton {
@@ -241,6 +253,7 @@
     border-width: 0 .5px .5px 0;
     display: inline-block;
     padding: .4vh;
+    margin-bottom: .3em;
 
 }
 
@@ -280,7 +293,7 @@ i.expanded{
 
 .itemTable{
     border-top: solid 1px rgba(160, 160, 160, 0.3);
-    border-radius: 10px;
+    border-radius: var(--border-size);
     font-size: calc(12px + 0.39vw);
 }
 .itemTable > tr{
